[gd_scene load_steps=2 format=3 uid="uid://dfli38cjhnxnq"]

[ext_resource type="Script" path="res://script/signup.gd" id="1_0apna"]

[node name="Signup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0apna")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 580.0
offset_bottom = 670.0

[node name="FirstNameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 23.0
text = "First Name"

[node name="FirstNameInput" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_right = 180.0
offset_bottom = 31.0
caret_blink = true

[node name="FirstNameWarning" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 236.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 0, 1)

[node name="LastNameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 23.0
text = "Last Name"

[node name="LastNameInput" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_right = 180.0
offset_bottom = 31.0
caret_blink = true

[node name="LastNameWarning" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 236.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 0, 1)

[node name="EmailLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 23.0
text = "Your Email Address"

[node name="EmailInput" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_right = 300.0
offset_bottom = 31.0
caret_blink = true

[node name="EmailWarning" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = " Must contain '@example.com'"

[node name="PassLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 75.0
offset_bottom = 23.0
text = "Password"

[node name="PassInput" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 35.0
select_all_on_focus = true
caret_blink = true
secret = true

[node name="PassWarning" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
text = " Password must be at least 8 characters long"

[node name="ConfirmPassLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 75.0
offset_bottom = 23.0
text = "Confirm Password"

[node name="ConfirmPassInput" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_right = 250.0
offset_bottom = 35.0
select_all_on_focus = true
caret_blink = true
secret = true

[node name="ConfirmPassWarning" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 152.0
offset_bottom = 23.0

[node name="TypeLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Account Type"

[node name="TypeOption" type="OptionButton" parent="Panel"]
layout_mode = 0
offset_right = 150.0
offset_bottom = 33.0
item_count = 2
popup/item_0/text = "Instructor"
popup/item_1/text = "Student"
popup/item_1/id = 1

[node name="SigninButton" type="Button" parent="Panel"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 45.0
focus_mode = 0
disabled = true
text = "Sign In"

[node name="LoginLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = " Already have an account? "

[node name="LoginLink" type="LinkButton" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.254902, 0.47451, 1, 1)
text = "Log In"

[connection signal="focus_exited" from="Panel/FirstNameInput" to="." method="_on_first_name_input_focus_exited"]
[connection signal="focus_exited" from="Panel/LastNameInput" to="." method="_on_last_name_input_focus_exited"]
[connection signal="text_changed" from="Panel/EmailInput" to="." method="_on_email_input_text_changed"]
[connection signal="text_changed" from="Panel/PassInput" to="." method="_on_pass_input_text_changed"]
[connection signal="text_changed" from="Panel/ConfirmPassInput" to="." method="_on_confirm_pass_input_text_changed"]
[connection signal="item_selected" from="Panel/TypeOption" to="." method="_on_type_option_item_selected"]
[connection signal="pressed" from="Panel/LoginLink" to="." method="_on_login_link_pressed"]
